    - Finish moving installation howto to manual.
    - Remove now-useless index.en.html.
    - 24 mb installs are now possible on i386.
    - Add -- to the end of the syslinux kernel append lines so user-params
      can work.
    - Add preseed udebs to initrds and document preseeding in manual.
      Closes: #265988
    - Bump genext2fs build dep to avoid building images with broken versions.
  * dann frazier
    - Add ia64 elilo .msg files from Jim Lieb
    - Add ia64 2.6 image build goo, contributed by Jim Lieb
  * Bastian Blank
    - Drop the whole bunch of languages on s390.
  * Stephen R. Marenka
    - Modify m68k/atari bootargs to default to
      debian-installer/framebuffer=false.
    - Update m68k manual.
    - Add bootfloppy.cfg for all vme.
    - Enable vme builds.
    - m68k image reorganization.
    - Add some m68k/q40 support.
  * Martin Michlmayr
    - Improve manifest descriptions of the Broadcom BCM1250 (SWARM)
      evaluation board.
    - Put a SiByl TFTP boot configuration script to sb1-swarm-bn/netboot.
    - Put the SiByl boot loader to sb1-swarm-bn/netboot.
    - Update the Cobalt manifest descriptions to reflect reality
      (the config now uses NFS, not TFTP).
    - Create an nfsroot tar file for Cobalt which can easily be extracted
      (containing all files including proper symlinks).
    - Put sibyl-installer on the sb1-swarm-bn/netboot initrd as a workaround
      to change debian-installer/kernel/linux/link_in_boot.
    - Switch mips and mipsel over to 2.4.27.
    - Put USB and input modules on the sb1-swarm-bn/netboot initrd to allow
      "desktop like" installations with framebuffer and USB keyboards.
  * Kurt Roeckx
    - Use kernel version 2.6.8-1 on amd64.
  * Steve Langasek
    - install manual updates for the alpha architecture
  * Christian Perrier
    - Added build/needed-characters/hi with the help of Pankaj

 -- Christian Perrier <bubulle@kheops.frmug.org>  Thu, 26 Aug 2004 11:17:34 +0200
